# ETOS

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
boot/: CMakeLists.txt  Makefile
boot/app/bootmgr/: bcd.c  bootmgr.c  fw.c
boot/app/bootmgr/efi/: efientry.c
boot/inc/: bootlib.h  bootmgr.h  efilib.h  io.h  mm.h
boot/lib/: bootlib.c  bootopt.c
boot/lib/efi/: eficon.c  efidebug.c  efierr.c  efifw.c  efiinit.c  efiwrap.c
boot/lib/io/: device.c  file.c  io.c
boot/lib/io/fs/: fat.c
boot/lib/misc/: event.c  option.c  resource.c  string.c  table.c
boot/lib/mm/: mm.c  mmha.c  mmmd.c  mmpa.c
boot/lib/x64/: arch.c  arch.h  archasm.S
sdk/crt/: CMakeLists.txt  Makefile
sdk/crt/stdio/: wprintf.c
sdk/crt/string/: mem.c  str.c  wmem.c  wstr.c
sdk/inc/crt/: errno.h  stdarg.h  stdbool.h  stddef.h  stdint.h  string.h  wchar.h
sdk/inc/efi/: efi.h  efiapi.h  eficon.h  efidef.h  efidevp.h  efierr.h  efiprot.h
sdk/inc/efi/i386/: efibind.h
sdk/inc/efi/x64/: efibind.h
sdk/inc/nt/: guiddef.h  nt.h  ntdef.h  ntimage.h  ntintsafe.h  ntrtl.h  ntstatus.h
sdk/rtl/: CMakeLists.txt  Makefile  guid.c  string.c
